# quixote

./: CHANGELOG.md  Cargo.toml  Makefile.md  README.md
example/1/: answers.json  answers.md  period-1.json  period-1.md  quiz.md
example/src/: addition.md  match.md  multiple-answer.md  subtraction.md  true-false.md  word-problems.md
src/: lib.rs
t/: README.md
