[package]
name = "quixote"
version = "0.7.0"
edition = "2024"
description = "Quizzes and tests in Markdown"
repository = "https://github.com/qtfkwk/quixote"
license = "MIT"

[dependencies]
alpha-counter = "0.3.0"
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
glob = "0.3.3"
pulldown-cmark = "0.13.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
veg = "0.6.0"

[target.'cfg(unix)'.dependencies]
pager = "0.16.1"
