[package]
name = "quixote"
version = "0.7.4"
edition = "2024"
description = "Quizzes and tests in Markdown"
repository = "https://github.com/qtfkwk/quixote"
license = "MIT"

[dependencies]
alpha-counter = "0.3.3"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
conv = "0.3.3"
glob = "0.3.3"
pulldown-cmark = "0.13.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
veg = "0.6.3"

[target.'cfg(unix)'.dependencies]
pager2 = "0.6.3"
